<resources>
    <string name="app_name">Gamepool</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_game">Start game</string>
    <string name="restart_lvl">Restart level</string>
    <string name="reset_score">Reset high score</string>
    <string name="Back">Return to game</string>
    <string name="mainTitle">Select game:</string>
    <string name="score">Score:</string>
    <string name="high_score">High Score:</string>
    <string name="game2048_name">2048</string>
    <string name="game_race_name">Race</string>
    <string name="car_image">car_image</string>
    <string name="select_car_text">Click to change car</string>
    <string name="zero">0</string>
    <string name="select_level">Select level:</string>
    <string name="easy">easy</string>
    <string name="restart_game">Restart game</string>
</resources>
