<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="whatever.gameRace.MenuRaceActivity"
    android:background="@drawable/game_race_background">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/raceLinearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/race_Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/score"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/race_ScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignTop="@+id/raceLinearLayout"
        android:layout_alignEnd="@+id/race_StartGame"
        android:id="@+id/raceLinearLayout2">

        <TextView
            android:id="@+id/race_HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/high_score"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/race_BestScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <Button
        android:id="@+id/race_ResetScore"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_score"
        android:textSize="12sp"
        android:layout_alignTop="@+id/race_StartGame"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/race_StartGame"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_car_text"
        android:id="@+id/carSelectText"
        android:layout_below="@+id/raceLinearLayout2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carImageView"
        android:onClick="onSwitch"
        android:contentDescription="@string/car_image"
        android:scaleType="fitStart"
        android:layout_below="@+id/carSelectText"
        android:layout_alignStart="@+id/carSelectText"
        android:layout_above="@+id/race_difficultyLevel"
        android:layout_alignEnd="@+id/carSelectText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_level"
        android:id="@+id/race_difficultyLevel"
        android:textSize="30sp"
        android:layout_above="@+id/race_ResetScore" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:id="@+id/race_levelValue"
        android:layout_marginLeft="10dp"
        android:onClick="onLevelChanged"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/race_difficultyLevel" />

</RelativeLayout>
