<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scoreLayout">

        <TextView
            android:id="@+id/t2048_Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/score"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tRace_ScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:textSize="30sp"
            android:layout_below="@+id/t2048_Score"
            android:layout_alignRight="@+id/t2048_Score"
            android:layout_alignLeft="@+id/t2048_Score"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/t2048_HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/high_score"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tRace_BestScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_alignLeft="@+id/t2048_HighScore"
            android:layout_below="@+id/t2048_HighScore"
            android:layout_alignRight="@+id/t2048_HighScore" />
    </RelativeLayout>

</LinearLayout>