<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="whatever.Fifteen.Game15Activity">

    <GridLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="800px"
        android:columnCount="4"
        android:rowCount="4">

        <ImageView
            android:id="@+id/imageView00"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="0"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="0"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView02"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="0"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView03"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="0"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="1"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="1"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="1"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="1"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="2"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="2"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="2"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="2"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="3"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="3"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="3"
            android:src="@drawable/board" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2px"
            android:layout_row="3"
            android:src="@drawable/board" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scoreLayout"
        android:layout_below="@+id/container">

        <TextView
            android:id="@+id/t2048_Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/score"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/t2048_ScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:textSize="30sp"
            android:layout_below="@+id/t2048_Score"
            android:layout_alignRight="@+id/t2048_Score"
            android:layout_alignLeft="@+id/t2048_Score"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/t2048_HighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/high_score"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/t2048_BestScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_alignLeft="@+id/t2048_HighScore"
            android:layout_below="@+id/t2048_HighScore"
            android:layout_alignRight="@+id/t2048_HighScore" />
    </RelativeLayout>

</RelativeLayout>
